<resources>
	<string name="app_name">Match</string>
	<string name="save_data_title">Save Data?</string>
	<string name="save_data_message">Do you want to save your changes?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
	<string name="title_activity_edit">EditActivity</string>
	<string name="done">Done</string>
	<string name="cancel">Cancel</string>
    <string name="help">Help</string>

    <string name="about_page">Hello World, I am a todo thing</string>

	<!-- form names for contact -->
	<string name="last_name">Last Name</string>
	<string name="first_name">First Name</string>
	<string name="home_phone">Home Phone</string>
	<string name="work_phone">Work Phone</string>
	<string name="mobile_phone">Mobile Phone</string>
	<string name="email_address">Email Address</string>

    <string name="score">Score</string>
</resources>
