<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.javadude.hw2.DisplayActivity">
    <item
        android:id="@+id/action_email"
        android:title="@string/email"
        android:icon="@drawable/ic_email_white_24dp"
        android:layout_width="match_parent"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:layout_width="match_parent"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:icon="@drawable/ic_help_white_24dp"
        android:layout_width="match_parent"
        app:showAsAction="ifRoom" />
</menu>
